--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/laravel-fractal",
+    "name": "andrewmclagan/laravel-fractal",
     "description": "An easy to use Fractal integration for Laravel applications",
     "keywords": [
         "spatie",
